--- a/index.html
+++ b/index.html
@@ -12,3 +12,6 @@
     <h1>ATRAVÉS DO ARANHA VERSO SUPERA O PRIMEIRO FILME?</h1>
     <p> <div id="homem-aranha"</p>
     v<iframe width="560" height="315" src="https://www.youtube.com/embed/a38wuXO_ywE?si=EQzMfuN0_oyuXvpf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    </body>
+    </html>
