--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-
+  <link rel="stylesheet"
 
   <meta charset="UTF-8">
   <meta name="viewport" content="widht-device-widht, initial-scale-1.0>"
